Middle and high tier resist spells now scale significantly faster.
Thunder strike path level increased to 3 from 2.
Shock evocations are now 80% less likely to be astral instead of air.
25% casting time effect research modifier increased from +2 to +3, given AI cast mod of +40%
10% casting time effect research modifier increased from +3 to +5, given AI cast mod of +70% 

NEW IN v1.1.1

"Unending" chain lightning scaling rate inreased by 50%.
Foulspawn and greater foulspawn rituals made higher research and have higher path requirement, they were previously WAY too strong.
Battlesummoned mages now always cost a gem. This is mainly to prevent recursive issues with summoning spells that can cast a pathboosting spell and then make more copies of themselves.

NEW IN v1.1.0

Cloudify is no longer a valid modifier on self-only spells such as communions
Added new banishments (cloud, special fire explosion and chain lightning)
Added generation UI

From magicgen_testing pack creation to v1.0.0:

touch spell range increased to 3
touch spells now 100 precision for the purposes of AI casting scores (they wouldn't really miss before this change)
touch spells given AI cast mod of +40%
skipchance for all combat summoned mages increased dramatically (was 21-31%, now 70%)
fixed fatigue cost for battlesummon released sage (400 base fatigue to 120)
reduced prices for summoned magus and alchemist (ritualsummons to 15 gems from 25, battle fatigue cost from 80 to 60)
standardised x1 mage battlesummon costs to 60 fatigue each, notably summoning revenants is now more expensive and pyromancers are cheaper
reduced fatigue increase for slow casting spell modifier, given AI cast mod of -50%
increased fatigue reduction for short ranged (10 range) spells
75% casting time effect disabled
50% casting time effect research modifier decreased from +2 to +1, given AI cast mod of +25%
25% casting time effect research modifier decreased from +4 to +2, given AI cast mod of +40%