@@ -1017,7 +1017,7 @@ id	name	wpn1	wpn2	wpn3	wpn4	wpn5	wpn6	wpn7	armor1	armor2	armor3	armor4	rt	reclim
 1024	Member of the Third Tier	92											1		0	1	2	2	10	0	17	10	9	8	8	10	3	14	10				10					2	1	1	1	2					2				3			2																																													90		1																																																																																																																					104																																																																																10000																																																																																																																																						
 1025	Divine Glyph												1		10000	1	6	6	50	0	18	30	20	5	5	15	1	0	2				120		80			0	0	0	0	2		40	4	1	1				2																											1							1										1																	1																	60		15			1							5													1	1																																																																																																																																															10000																																																										1																																																																												
 1026	Carrion Dragon	71	71	20	29	532							1		180	1	6	6	200	11	18	30	27	16	10	8	0	20	10				40	80				0	1	0	0	2	1	80	2							1	1																						1	1		1					1							1																	1					1															1				25							15																																																																				1027																																																																		1	1	-2																								10000																																																										1																																												1																																
-1027	Carrion Lord	71	71	252									1		180	1	3	3	53	2	18	16	19	8	8	8	0	20	9				40	80				2	1	1	1	2		80	2							1	1																						1	1		1					1							1									40								1					1															1				25							5																																																																				1026																																																																																												10000																																																										1																																												1																																
+1027	Carrion Lord	71	71	252									1		180	1	3	3	53	2	18	30	19	8	8	8	0	20	9				40	80				2	1	1	1	2		80	2							1	1																						1	1		1					1							1									40								1					1															1				25							5																																																																				1026																																																																																												10000																																																										1																																												1																																
 1028	Wolfherd	7	22						5				1		50	1	2	2	10	0	9	12	10	11	9	10	3	14	12				40					2	1	1	1	2																																									1	1															40																			-1		3															2																																																																																				284	2																																																																														10000																																																																																																																																						
 1029	Captain	10							9	20			1		10010	1	2	2	11	0	10	12	10	11	11	10	3	14	12				60					2	1	1	1	2																																																							999	4																																																																																																																																																																																																								10000																																																																																																																																						
 1030	Admiral	10							9	20			1		10010	1	2	2	13	0	10	14	10	12	13	10	3	14	12				80					2	1	1	1	2																																																							999	6																																																																																																																																																																																																								10000																																																																																																																																						
@@ -1052,7 +1052,7 @@ id	name	wpn1	wpn2	wpn3	wpn4	wpn5	wpn6	wpn7	armor1	armor2	armor3	armor4	rt	reclim
 1059	Knight of the Deeps	4	643	330					101	135	25		1		10045	1	3	2	16	1	14	14	13	12	13	10	4	20	30		1		40					2	1	1	0	2																														1																1																			1																																																																																																																																																																																															10000																																																																																																																																						
 1060	Triton Knight	4	31	330					23	135	25		1		10040	1	3	2	15	1	12	13	12	11	11	10	4	20	30		1		40					2	1	1	0	2																																														1																			1																																																																																																																																																																																															10000																																																																																																																																						
 1061	Triton Prince	4	643	330					101	135	189		1		10045	1	3	2	17	1	14	16	13	13	13	10	4	20	30		1		120					2	1	1	0	2																														1																1																			1																																																																																																																																																																																															10000																																																																																																																																						
-1062	Sea Stag	354											1		0	1	3	3	19	3	6	8	13	10	10	5	3	20	26				40					0	0	0	0	2																																						1								1																										1																																																																																																																																								1															20																																	10000																																																																																																																																						
+1062	Sea Stag	634											1		0	1	3	3	19	3	6	8	13	10	10	5	3	20	26				40					0	0	0	0	2																																						1								1																										1																																																																																																																																								1															20																																	10000																																																																																																																																						
 1063	Leocampus	322	29										1		0	1	3	3	27	5	6	13	16	13	11	5	3	20	22				40					0	0	0	0	2																																						1								1																										1																																																																																																																																								1															20																																	10000																																																																																																																																						
 1064	Sea Dog	20											1		0	1	2	2	14	7	6	11	10	11	11	5	2	2	12				40					0	0	0	0	2																																						1									1																									1																																																																																																																																								1															20																																	10000																																																																																																																																						
 1065	Merman	31											1		10010	1	2	2	10	1	12	10	10	10	10	10	3	16	22				40					2	1	1	0	2																																															1																																																																																																																									1066																																																																																								10000																																																																																																																																						
@@ -1170,7 +1170,7 @@ id	name	wpn1	wpn2	wpn3	wpn4	wpn5	wpn6	wpn7	armor1	armor2	armor3	armor4	rt	reclim
 1179	Serpent	495											1		0	1	3	3	28	8	5	13	13	13	11	5	3	18	20				40					0	0	0	0	2																																						1	1					1																												1																																																																																																																																								1															20																																	10000																																																																																																												1	1																									
 1180	Spirit Guide	9											1		10010	1	2	2	9	0	12	9	9	9	9	10	3	14	9				10					2	1	1	1	2										1																																																																																																																																																																																																																																																						10000																																																										1																																																																												
 1181	Enarie	9											1		10010	1	2	2	9	0	14	8	9	9	9	10	3	14	8				10					2	1	1	1	2									1	2	1																																																																																																																												10																																																																																																																									10000																																																										1																																				1																																								
-1182	Hedge Wizard	7							15	118			1		10030	1	2	2	10	0	12	8	10	10	10	10	3	14	12				10					2	1	1	1	2											1																																																																																																																																																																																																																																																					10000																																																																																																																																						
+1182	Hedge Wizard	7							15	121			1		10030	1	2	2	10	0	12	8	10	10	10	10	3	14	12				10					2	1	1	1	2											1																																																																																																																																																																																																																																																					10000																																																																																																																																						
 1183	Androphag Archer	9	372						5				1		10012	1	2	2	11	0	10	11	11	10	10	11	3	14	12				40					2	1	1	1	2																																																																																																																																																																																																																																																																10006																																								1																																																																																														
 1184	Sauromatian Archer	9	264						5				1		10010	1	2	2	11	0	10	11	11	10	10	11	3	14	12				40					2	1	1	1	2																																																																																																																																																																																																																																																																10000																																								1																																																																																														
 1185	Oiorpata	357	19						12	118	2		1		10025	1	3	2	11	0	11	13	11	12	13	12	4	20	18		1		40					2	1	1	0	2																														1										1																																																																																																																																																																																																																								10000																																			1					1																																																																																														
